feat(package-detail): add support for inactive courses in package details and update related API and types
