# openapi.json
@@ -2332,6 +2332,16 @@
               "type": "integer",
               "title": "Course Id"
             }
+          },
+          {
+            "name": "include_inactive",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean",
+              "default": false,
+              "title": "Include Inactive"
+            }
           }
         ],
         "responses": {
